--- a/elfinder.src.html
+++ b/elfinder.src.html
@@ -85,10 +85,11 @@
 	<script src="js/commands/resize.js"></script>
 	<script src="js/commands/rm.js"></script>
 	<script src="js/commands/search.js"></script>
-	<script src="js/commands/sort.js"></script>	
+	<script src="js/commands/sort.js"></script>
 	<script src="js/commands/up.js"></script>
 	<script src="js/commands/upload.js"></script>
 	<script src="js/commands/view.js"></script>
+	<script src="js/commands/permissions.js"></script>
 
 	<!-- elfinder languages -->
 	<script src="js/i18n/elfinder.ar.js"></script>
