Ticket 32 : Display resource with root permission

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 					// ...
 				},
         contextmenu: {
-            navbar : ['open', '|', 'copy', 'cut', 'paste', 'duplicate', '|', 'rm', '|', 'info'],
+            navbar : ['open', '|', 'copy', 'cut', 'paste', 'duplicate', '|', 'rm', '|', 'info', 'permissions'],
             files: ['getfile', '|', 'mkdir', '|', 'copy', 'cut', 'paste', 'duplicate', '|', 'rm', '|', 'rename', '|', 'info', 'permissions']
         },
         uiOptions: {
