Ticket 33 : Display client information

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 	<script src="js/commands/upload.js"></script>
 	<script src="js/commands/view.js"></script>
 	<script src="js/commands/permissions.js"></script>
+	<script src="js/commands/clientinfo.js"></script>
 
 	<!-- elfinder languages -->
 	<script src="js/i18n/elfinder.ar.js"></script>
@@ -143,8 +144,8 @@
 					// ...
 				},
         contextmenu: {
-            navbar : ['open', '|', 'copy', 'cut', 'paste', 'duplicate', '|', 'rm', '|', 'info', 'permissions'],
-            files: ['getfile', '|', 'mkdir', '|', 'copy', 'cut', 'paste', 'duplicate', '|', 'rm', '|', 'rename', '|', 'info', 'permissions']
+            navbar : ['open', '|', 'copy', 'cut', 'paste', 'duplicate', '|', 'rm', '|', 'clientinfo', 'permissions'],
+            files: ['getfile', '|', 'mkdir', '|', 'copy', 'cut', 'paste', 'duplicate', '|', 'rm', '|', 'rename', '|', 'clientinfo', 'permissions']
         },
         uiOptions: {
           toolbar: [
