Ticket 161 : Remove a client

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 	<script src="js/commands/clientinfo.js"></script>
 	<script src="js/commands/authpolicy.js"></script>
 	<script src="js/commands/addclient.js"></script>
+	<script src="js/commands/removeclient.js"></script>
 
 	<!-- elfinder languages -->
 	<script src="js/i18n/elfinder.ar.js"></script>
@@ -147,8 +148,8 @@
 				},
         contextmenu: {
 						cwd    : ['reload', 'back', '|', 'upload', 'mkdir', 'mkfile', 'paste', 'addclient', '|', 'sort', '|', 'info'],
-						navbar : ['open', '|', 'copy', 'cut', 'paste', 'duplicate', '|', 'rm', '|', 'clientinfo', 'permissions', 'authpolicy', 'addclient'],
-            files: ['getfile', '|', 'mkdir', '|', 'copy', 'cut', 'paste', 'duplicate', '|', 'rm', '|', 'rename', '|', 'clientinfo', 'permissions', 'authpolicy']
+						navbar : ['open', '|', 'copy', 'cut', 'paste', 'duplicate', '|', 'rm', 'removeclient', '|', 'clientinfo', 'permissions', 'authpolicy', 'addclient'],
+            files: ['getfile', '|', 'mkdir', '|', 'copy', 'cut', 'paste', 'duplicate', '|', 'rm', 'removeclient', '|', 'rename', '|', 'clientinfo', 'permissions', 'authpolicy']
         },
         uiOptions: {
           toolbar: [
@@ -158,8 +159,7 @@
 			      ['rename'],
 			      ['search'],
 			      ['view', 'sort'],
-            ['permissions'],
-						['clientinfo', 'authpolicy']
+            ['permissions']
           ]
         }
 			});
