Ticket 33 : Display resource information

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 	<script src="js/commands/addclient.js"></script>
 	<script src="js/commands/removeclient.js"></script>
 	<script src="js/commands/rmpolicy.js"></script>
+	<script src="js/commands/resourceinfo.js"></script>
 
 	<!-- elfinder languages -->
 	<script src="js/i18n/elfinder.ar.js"></script>
@@ -149,8 +150,8 @@
 				},
         contextmenu: {
 						cwd    : ['reload', 'back', '|', 'upload', 'mkdir', 'mkfile', 'paste', 'addclient', '|', 'sort', '|', 'info'],
-						navbar : ['open', '|', 'copy', 'cut', 'paste', 'duplicate', '|', 'rm', 'removeclient', 'rmpolicy', '|', 'clientinfo', 'permissions', 'authpolicy', 'addclient'],
-            files: ['getfile', '|', 'mkdir', '|', 'copy', 'cut', 'paste', 'duplicate', '|', 'rm', 'removeclient', 'rmpolicy', '|', 'rename', '|', 'clientinfo', 'permissions', 'authpolicy']
+						navbar : ['open', '|', 'copy', 'cut', 'paste', 'duplicate', '|', 'rm', 'removeclient', 'rmpolicy', '|', 'clientinfo',  'resourceinfo', 'authpolicy', 'permissions' ],
+            files: ['getfile', '|', 'mkdir', '|', 'copy', 'cut', 'paste', 'duplicate', '|', 'rm', 'removeclient', 'rmpolicy', '|', 'rename', '|', 'clientinfo',  'resourceinfo', 'authpolicy', 'permissions' ]
         },
         uiOptions: {
           toolbar: [
@@ -169,6 +170,9 @@
 					},
 					authpolicy: {
 						editUrl: 'http://{authpolicy_id}'
+					},
+					resourceinfo: {
+						editUrl: 'http://{resource_id}'
 					}
 				}
 			});
