Ticket 33 : Remove a resource

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 	<script src="js/commands/removeclient.js"></script>
 	<script src="js/commands/rmpolicy.js"></script>
 	<script src="js/commands/resourceinfo.js"></script>
+	<script src="js/commands/rmresource.js"></script>
 
 	<!-- elfinder languages -->
 	<script src="js/i18n/elfinder.ar.js"></script>
