--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 	<script src="js/commands/rmpolicy.js"></script>
 	<script src="js/commands/resourceinfo.js"></script>
 	<script src="js/commands/rmresource.js"></script>
+	<script src="js/commands/rmscope.js"></script>
 
 	<!-- elfinder languages -->
 	<script src="js/i18n/elfinder.ar.js"></script>
@@ -151,8 +152,8 @@
 				},
         contextmenu: {
 						cwd    : ['reload', 'back', '|', 'upload', 'mkdir', 'mkfile', 'paste', 'addclient', '|', 'sort', '|', 'info'],
-						navbar : ['open', '|', 'copy', 'cut', 'paste', 'duplicate', '|', 'rm', 'removeclient', 'rmpolicy', '|', 'clientinfo',  'resourceinfo', 'authpolicy', 'permissions' ],
-            files: ['getfile', '|', 'mkdir', '|', 'copy', 'cut', 'paste', 'duplicate', '|', 'rm', 'removeclient', 'rmpolicy', '|', 'rename', '|', 'clientinfo',  'resourceinfo', 'authpolicy', 'permissions' ]
+						navbar : ['open', '|', 'copy', 'cut', 'paste', 'duplicate', '|', 'rm', 'removeclient', 'rmpolicy', 'rmscope', '|', 'clientinfo',  'resourceinfo', 'authpolicy', 'permissions' ],
+            files: ['getfile', '|', 'mkdir', '|', 'copy', 'cut', 'paste', 'duplicate', '|', 'rm', 'removeclient', 'rmpolicy', 'rmscope', '|', 'rename', '|', 'clientinfo',  'resourceinfo', 'authpolicy', 'permissions' ]
         },
         uiOptions: {
           toolbar: [
