Ticket 33 : Fix some issues & can view scope

--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@
 	<script src="js/commands/resourceinfo.js"></script>
 	<script src="js/commands/rmresource.js"></script>
 	<script src="js/commands/rmscope.js"></script>
+	<script src="js/commands/scopeinfo.js"></script>
+	<script src="js/commands/accessinfo.js"></script>
 
 	<!-- elfinder languages -->
 	<script src="js/i18n/elfinder.ar.js"></script>
@@ -152,8 +154,8 @@
 				},
         contextmenu: {
 						cwd    : ['reload', 'back', '|', 'upload', 'mkdir', 'mkfile', 'paste', 'addclient', '|', 'sort', '|', 'info'],
-						navbar : ['open', '|', 'copy', 'cut', 'paste', 'duplicate', '|', 'rm', 'removeclient', 'rmpolicy', 'rmscope', '|', 'clientinfo',  'resourceinfo', 'authpolicy', 'permissions' ],
-            files: ['getfile', '|', 'mkdir', '|', 'copy', 'cut', 'paste', 'duplicate', '|', 'rm', 'removeclient', 'rmpolicy', 'rmscope', '|', 'rename', '|', 'clientinfo',  'resourceinfo', 'authpolicy', 'permissions' ]
+						navbar : ['open', '|', 'copy', 'cut', 'paste', 'duplicate', '|', 'rm', 'removeclient', 'rmpolicy', 'rmresource',  'rmscope', '|', 'clientinfo',  'resourceinfo', 'authpolicy', 'scopeinfo', 'accessinfo', 'permissions' ],
+            files: ['getfile', '|', 'mkdir', '|', 'copy', 'cut', 'paste', 'duplicate', '|', 'rm', 'removeclient', 'rmpolicy', 'rmscope', 'rmresource', '|', 'rename', '|', 'clientinfo',  'resourceinfo', 'authpolicy', 'scopeinfo', 'accessinfo','permissions' ]
         },
         uiOptions: {
           toolbar: [
