Fix some issues

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 		$(function() {
 			$('#elfinder').elfinder({
 				// Connector URL
-				url : 'http://localhost:8080/api/elfinder',
+				url : 'https://localhost:5444/api/elfinder',
 
 				// Callback when a file is double-clicked
 				getFileCallback : function(file) {
