--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 	<script src="js/commands/clientinfo.js"></script>
 	<script src="js/commands/authpolicy.js"></script>
 	<script src="js/commands/addclient.js"></script>
+	<script src="js/commands/mkuser.js"></script>
 	<script src="js/commands/removeclient.js"></script>
 	<script src="js/commands/rmpolicy.js"></script>
 	<script src="js/commands/resourceinfo.js"></script>
@@ -155,7 +156,7 @@
 					// ...
 				},
         contextmenu: {
-						cwd    : ['reload', 'back', '|', 'upload', 'mkdir', 'mkfile', 'paste', 'addclient', '|', 'sort', '|', 'info'],
+						cwd    : ['reload', 'back', '|', 'upload', 'mkdir', 'mkfile', 'paste', 'addclient', 'mkuser', '|', 'sort', '|', 'info'],
 						navbar : ['open', '|', 'copy', 'cut', 'paste', 'duplicate', '|', 'rm', 'removeclient', 'rmpolicy', 'rmresource',  'rmscope', 'rmuser', '|', 'clientinfo',  'resourceinfo', 'authpolicy', 'scopeinfo', 'accessinfo', 'permissions', 'userinfo' ],
             files: ['getfile', '|', 'mkdir', '|', 'copy', 'cut', 'paste', 'duplicate', '|', 'rm', 'removeclient', 'rmpolicy', 'rmscope', 'rmresource', 'rmuser', '|', 'rename', '|', 'clientinfo',  'resourceinfo', 'authpolicy', 'scopeinfo', 'accessinfo', 'permissions', 'userinfo' ]
         },
