Ticket 177 : Edit resource owner

--- a/index.html
+++ b/index.html
@@ -180,6 +180,9 @@
 					},
 					resourceinfo: {
 						editUrl: 'http://{resource_id}'
+					},
+					userinfo: {
+						editUrl: 'http://localhost:4200/users/{user_id}'
 					}
 				}
 			});
