Send json instruction

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 		$(function() {
 			$('#elfinder').elfinder({
 				// Connector URL
-				url : 'https://localhost:5444/api/elfinder',
+				url : 'http://localhost:5000/elfinder',
 
 				// Callback when a file is double-clicked
 				getFileCallback : function(file) {
